--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
+        "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3"
+        "laravel/ui": "^3.3",
+        "nexmo/client": "^2.4",
+        "nexmo/laravel": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
